feat: strongly typed meldeanlass and added gleason observation to generated bundles